--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
-    "bootstrap": "^5.2.1",
+    "bootstrap": "^5.2.2",
     "firebase": "^9.10.0",
     "firebase-tools": "^11.13.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.4.0",
+    "react-rain-animation": "^1.0.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
